Remove PodCoverageTests plugin

--- a/dist.ini
+++ b/dist.ini
@@ -12,6 +12,7 @@ remove = PodVersion
 remove = UploadToCPAN
 ; Do not ask for confirmation when running dzil release
 remove = ConfirmRelease
+remove = PodCoverageTests
 
 [FakeRelease]
 [AutoPrereqs]
