Add Test::Compile plugin

--- a/dist.ini
+++ b/dist.ini
@@ -23,6 +23,10 @@ remove = PodCoverageTests
 [NextRelease]
    format = "%-2v  %{yyyy-MM-dd}d"
 
+; Auto generate compile tests
+[Test::Compile]
+bail_out_on_fail = 1
+
 [GithubMeta]
    issues = 1
 
