--- a/dist.ini
+++ b/dist.ini
@@ -27,6 +27,9 @@ remove = PodCoverageTests
 [Test::Compile]
 bail_out_on_fail = 1
 
+; Generate a cpanfile
+[CPANFile]
+
 [GithubMeta]
    issues = 1
 
