Fix copyright holder

--- a/dist.ini
+++ b/dist.ini
@@ -1,7 +1,7 @@
 name = CourtIO-YAML-PP
 author = CourtAPI Team <support@courtapi.com>
 license = Perl_5
-copyright_holder = Michael Schout
+copyright_holder = CourtAPI
 copyright_year = 2020
 
 [@Filter]
