Add log4perl logging and --trace option

--- a/dist.ini
+++ b/dist.ini
@@ -15,7 +15,11 @@ remove = ConfirmRelease
 remove = PodCoverageTests
 
 [FakeRelease]
+
 [AutoPrereqs]
+[Prereqs]
+Log::Log4perl::Appender::ScreenColoredLevels = 0
+
 [MinimumPerl]
 [InsertCopyright]
 [PodWeaver]
