--- a/META.yml
+++ b/META.yml
@@ -23,6 +23,9 @@ requires:
   File::Basename: '0'
   File::Slurp: '0'
   File::Spec: '0'
+  JSON::XS: '0'
+  Log::Log4perl: '0'
+  Log::Log4perl::Appender::ScreenColoredLevels: '0'
   Moo: '0'
   MooX::Cmd: '0'
   MooX::Options: '0'
@@ -37,6 +40,6 @@ resources:
   bugtracker: https://github.com/CourtAPI/courtio-yaml-include/issues
   homepage: https://github.com/CourtAPI/courtio-yaml-include
   repository: https://github.com/CourtAPI/courtio-yaml-include.git
-version: '0.01'
+version: '0.02'
 x_generated_by_perl: v5.26.2
 x_serialization_backend: 'YAML::Tiny version 1.73'
