--- a/META.yml
+++ b/META.yml
@@ -29,7 +29,8 @@ requires:
   Moo: '0'
   MooX::Cmd: '0'
   MooX::Options: '0'
-  YAML::PP: '0'
+  YAML::PP: '0.021'
+  YAML::PP::Common: '0'
   namespace::clean: '0'
   parent: '0'
   perl: '5.006'
@@ -40,6 +41,6 @@ resources:
   bugtracker: https://github.com/CourtAPI/courtio-yaml-include/issues
   homepage: https://github.com/CourtAPI/courtio-yaml-include
   repository: https://github.com/CourtAPI/courtio-yaml-include.git
-version: '0.02'
+version: '0.03'
 x_generated_by_perl: v5.26.2
 x_serialization_backend: 'YAML::Tiny version 1.73'
