Wire up docker hub publishing to release

--- a/dist.ini
+++ b/dist.ini
@@ -48,3 +48,6 @@ bail_out_on_fail = 1
 [Git::Push]
    push_to = origin
    push_to = origin build/releases
+
+[Docker]
+  image_name = courtapi/courtio-yaml-include
